manifests/oyashiro-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oyashiro-deployment
  namespace: oyashiro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sengu-toolkit-docker
  template:
    metadata:
      labels:
        app: sengu-toolkit-docker
    spec:
      containers:
      - name: sengu-toolkit-docker-container
        image: nord14541/sengu-toolkit-docker:latest
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /home/oyashiro_user
          name: home
      - name: resilio-container
        image: resilio/sync
        volumeMounts:
        - mountPath: /mnt/sync
          name: home
      - name: dind-daemon
        image: docker:19.03-dind
        volumeMounts:
        - mountPath: /home/oyashiro_user
          name: home
        resources:
          requests:
            cpu: 20m
            memory: 512Mi
        securityContext:
          privileged: true
      volumes:
      - name: home
        persistentVolumeClaim:
          claimName: oyashiro-pvc
