manifests/oyashiro-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oyashiro-service
spec:
  type: LoadBalancer
  ports:
  - name: "http"
    protocol: "TCP"
    port: 80
    targetPort: 6080
  selector:
    app: sengu-toolkit-docker
