manifests/oyashiro-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oyashiro-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: @DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oyashiro-service
            port:
              number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: @DOMAIN
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
  tls:
  - hosts:
    - @DOMAIN
    secretName: letsencrypt-prod
